# JobSensei

./: .bazelignore  .gitignore  README.md  WORKSPACE.bazel  package.json  py_layer.bzl
.build/mongo-entrypoint/: mongo-init.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/mongo-entrypoint/: entrypoint.js
.github/workflows/: build.yml
consumers/common/: BUILD.bazel  __init__.py  topic.py
consumers/llm/: BUILD.bazel  llm_consumer.py  prompts.py
consumers/sourcing/: BUILD.bazel  data_lake_handler.py  delta_processor.py  sourcing.py  state.py  topic.py
graphql/: BUILD.bazel  schema.py  server.py
llm/: BUILD.bazel  README.md  llama_cpp.bzl  llm.py
scraper/: BUILD  BUILD.bazel
scraper/src/: main.py  settings.py
scraper/src/pipelines/: __init__.py  kafka.py
scraper/src/spiders/: career_spider.py
web/: README.md  angular.json  defs.bzl  package.json  pnpm-lock.yaml
web/src/: BUILD.bazel  index.html
web/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  app.routes.ts  job.ts  jobs.service.spec.ts  jobs.service.ts
web/src/app/job/: job.component.css  job.component.html  job.component.spec.ts  job.component.ts
web/src/app/job-card/: job-card.component.css  job-card.component.html  job-card.component.spec.ts  job-card.component.ts
web/src/app/job-list/: job-list.component.html  job-list.component.spec.ts  job-list.component.ts
web/src/app/not-found/: not-found.component.spec.ts
web/src/app/theme-toggle/: theme-toggle.component.css  theme-toggle.component.html  theme-toggle.component.spec.ts  theme-toggle.component.ts
web/tools/: BUILD.bazel  karma.bzl  ng.bzl  ts.bzl
