load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    sha256 = "0a8003b044294d7840ac7d9d73eef05d6ceb682d7516781a4ec62eeb34702578",
    strip_prefix = "rules_python-0.24.0",
    urls = ["https://github.com/bazelbuild/rules_python/releases/download/0.24.0/rules_python-0.24.0.tar.gz"],
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python3_11",
    python_version = "3.11",
)

load("@python3_11//:defs.bzl", "interpreter")
load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "pip_deps",
    python_interpreter_target = interpreter,
    download_only = True,  # Making sure we use pip download instead of pip wheel
    requirements_lock = "//third-party:requirements_lock.txt",
)

load("@pip_deps//:requirements.bzl", "install_deps")

install_deps()

http_archive(
    name = "llama_cpp",
    build_file = "//llm:llama_cpp.bzl",
    sha256 = "7a1738d411cb53f450cedf29054d0d8168b6b0aa30127f63e8a5079387771dab",
    strip_prefix = "llama.cpp-b1078",
    urls = ["https://github.com/ggerganov/llama.cpp/archive/refs/tags/b1078.tar.gz"],
    visibility = ["//visibility:public"],
)

pip_parse(
    name = "llm_deps",
    python_interpreter_target = interpreter,
    download_only = True,  # Making sure we use pip download instead of pip wheel
    requirements_lock = "@llama_cpp//:requirements.txt",
)

load("@llm_deps//:requirements.bzl", llm_install = "install_deps")

llm_install()

http_archive(
    name = "rules_foreign_cc",
    sha256 = "2a4d07cd64b0719b39a7c12218a3e507672b82a97b98c6a89d38565894cf7c51",
    strip_prefix = "rules_foreign_cc-0.9.0",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/refs/tags/0.9.0.tar.gz",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

# This sets up some common toolchains for building targets. For more details, please see
# https://bazelbuild.github.io/rules_foreign_cc/0.9.0/flatten.html#rules_foreign_cc_dependencies
rules_foreign_cc_dependencies()
