load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    sha256 = "5868e73107a8e85d8f323806e60cad7283f34b32163ea6ff1020cf27abef6036",
    strip_prefix = "rules_python-0.25.0",
    urls = ["https://github.com/bazelbuild/rules_python/releases/download/0.25.0/rules_python-0.25.0.tar.gz"],
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python3_11",
    python_version = "3.11",
)

load("@python3_11//:defs.bzl", "interpreter")
load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "pip_deps",
    python_interpreter_target = interpreter,
    download_only = True,  # Making sure we use pip download instead of pip wheel
    requirements_lock = "//third-party:requirements_lock.txt",
)

load("@pip_deps//:requirements.bzl", "install_deps")

install_deps()

http_archive(
    name = "llama_cpp",
    build_file = "//llm:llama_cpp.bzl",
    sha256 = "385ba17a665f2141a5f4f825e833fe14f3f76af56f65b512b87541cb8ff7a91c",
    strip_prefix = "llama.cpp-b1445",
    urls = ["https://github.com/ggerganov/llama.cpp/archive/refs/tags/b1445.tar.gz"],
)

pip_parse(
    name = "llm_deps",
    python_interpreter_target = interpreter,
    download_only = True,  # Making sure we use pip download instead of pip wheel
    requirements_lock = "@llama_cpp//:requirements.txt",
)

load("@llm_deps//:requirements.bzl", llm_install = "install_deps")

llm_install()

http_archive(
    name = "rules_foreign_cc",
    sha256 = "2a4d07cd64b0719b39a7c12218a3e507672b82a97b98c6a89d38565894cf7c51",
    strip_prefix = "rules_foreign_cc-0.9.0",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/refs/tags/0.9.0.tar.gz",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

# This sets up some common toolchains for building targets. For more details, please see
# https://bazelbuild.github.io/rules_foreign_cc/0.9.0/flatten.html#rules_foreign_cc_dependencies
rules_foreign_cc_dependencies()
