load("@pip_deps//:requirements.bzl", "requirement")

py_binary(
    name = "graphql",
    srcs = glob(["*.py"]),
    imports = ['.'],
    data = glob([".env"]),
    main = "server.py",
    deps = [
        requirement("graphene"),
        requirement("flask"),
        requirement("graphql-server"),
        requirement("pymongo"),
        requirement("python-decouple"),
    ],
)
