genrule(
    name = "conversion",
    srcs = glob(["model/**"]),
    outs = ["model/ggml-model-q5_K_M.gguf"],
    cmd = " && ".join([
        "$(location @llama_cpp//:convert) llm/model/llama2",
        "$(location @llama_cpp//:quantize) llm/model/llama2/ggml-model-f16.gguf $(@) q5_K_M",
    ]),
    tools = [
        "@llama_cpp//:convert",
        "@llama_cpp//:quantize",
    ],
)

py_library(
    name = "llm",
    srcs = ["llm.py"],
    data = [
        "@llama_cpp//:mainbin",
        ":model/ggml-model-q5_K_M.gguf"
    ],
    imports = ["."],
    visibility = ["//consumers/llm:__pkg__"]
)